<resources>
    <string name="app_name">TMS_Android</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="task_4">Task 4</string>
    <string name="task_5">Task 5</string>
    <string name="task_6">Task 6</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="age">Age</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="open_profile">Open profile</string>
    <string name="profile">Profile</string>
    <string name="fill_in_the_fields">Fill in the fields</string>
    <string name="life_cycle">Life cycle</string>
    <string name="catalog">Catalog</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="android_image">Some android</string>
    <string name="back">Back</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="enter_phone">Enter your phone</string>
    <string name="enter_pass">Enter your password</string>
    <string name="online">Online</string>
    <string name="dark_mode">Dark mode</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="download_complete">Download complete</string>
    <string name="start_download">Start download</string>
    <string name="loading_text">Loading text</string>
    <string name="lesson3">Lesson 3</string>
    <string name="add_fragment">Add fragment</string>
    <string name="number_page">Page</string>
    <string name="added_page">Page added</string>
    <string name="cancel">Cancel</string>
    <string name="add_rec">Add element</string>
    <string name="plug">No element</string>

</resources>