<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_tv"
            android:layout_marginTop="@dimen/layout_marginTop_tv"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_marginTop_et_50"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/phone"
            android:inputType="phone"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/layout_marginTop_20"
            />
        <EditText
            android:id="@+id/et_pass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/layout_marginTop_20"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_marginTop_20"
            />


    </LinearLayout>
