<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_complete"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />
        <Button
            android:id="@+id/btn_start_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_download"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/load_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"/>
        <TextView
            android:id="@+id/tv_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_text"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
</FrameLayout>