<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile"
        app:layout_constraintStart_toEndOf="@+id/label_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/tv_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@id/label_age"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="250dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"/>
    <TextView
        android:id="@+id/label_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="250dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/tv_age"
        app:layout_constraintStart_toStartOf="@+id/tv_age"/>
</androidx.constraintlayout.widget.ConstraintLayout>